  were not being handled with ``data-on`` on a textarea in FireFox,
  triggered by a user (the issue didn't exist with firing with trigger).

* Throw away some dependencies (datalink, qunit) that weren't in use
  (anymore).

* Add ``passwordField`` to Obviel Forms, which renders using ``<input
  type="password">``. Otherwise it is like ``textlineField``. Thank you
  Sjoerd van Elferen.

1.0b6 (2013-04-04)
==================

* **Backwards incompatible!** Template language renaming. The general
  pattern is to use imperative verbs where possible for directives
  (though ``data-on`` is an exception):

  * ``data-each`` was renamed to ``data-repeat`` and ``@each`` to
    ``@repeat``.
 
  * ``data-view`` becomes ``data-render``, as it really calls Obviel's
    ``render()`` function to render an object.

  * ``data-func`` becomes ``data-call``, as it really calls a function on
    the view.

  * ``data-handler`` becomes ``data-on`` as its shorter and ``on`` typically
    implies event handling.

  A simple search and replace in your templates for these names should
  be enough to update your templates.

* If a dynamic class was in use (class="{foo}") this could break
  ``data-id``, ``data-src``, ``data-unwrap`` and ``data-el``. Thanks
  to Daniel Havlik (nilo) for identifying the problem and providing a
  fix!
  
* Start of sync documentation. Still science fiction though - implementation
  is lagging behind API changes in docs.

* A ``cooldown`` feature for Obviel Forms controls which allows you to
  state a period of time in ms in which the button is unresponsive
  after clicking it first. This is useful in preventing fast multiple
  clicks.

* A few documentation tweaks.

1.0b5 (2013-01-18)
==================

* The default HTTP error hook shouldn't do an alert; it's now quiet.

* Fix a bug in obviel forms that caused errors not to be displayed
  properly for fields in Internet Explorer.

1.0b4 (2013-01-09)
==================
